--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-fsx
+<!DOCTYPE html>
+<html lang="ru">
+      <head>
+<title>1</title>
+<meta charset="utf-8">
+<meta name="author" content="Баландин М.А. s0169595">
+</head>
+
+<ol>
+  <li><a href="http://example.com/">http</a></li>
+  <li><a href="https://example.com/">https</a></li>
+   <li><a href="ftp://example.com/">ftp</a></li>
+  <li><a href="ftp://user:password@adress.com/">login:password</a></li>
+  <li><a href="httр://ru.wikipedia.org/wiki/Кубанский_государственный_университет#Ссылки">Сылка на фрагмент сайта</a></li>
+  <li><a href="https://balandinmaxim.github.io/#top">Ссылка на фрагмент текущего сайта</a></li>
+  <li><a href="https://ru.wikipedia.org/wiki/Кубанский_государственный_университет?sl=en&tl=ru">Ссылка с 2мя параметрами URL</a></li>
+  <li>
+  <ol>
+        <li><a href="https://www.kubsu.ru/" title="Официальный сайт Кубанского государственного университета">Оф. сайт КубГУ</a></li>
+        <li><a href="https://www.kubsu.ru/user" title="Страница для авторизации на сайте Кубанского государственного университета" >Авторизция на официальном сайте КубГУ</a></li>
+  </ol>
+ <li> <a>http://example.com - wihtout href</a></li>
+  <li><a href="">Пустой_href</a></li>
+  <li><a href="https://www.google.ru/">Переход к поисковой системе гугл</a></li>
+  <li><a href="https://yandex.ru/" rel="nofollow">nofollow</a></li>
+  <li><!--noindex--><a href="http//:example.com">Ссылка без индексации</a><!--/noindex-->
+  <li><a href="https://yandex.ru/" rel="help">Контекстная информация</a></li>
+  <li><a href="https://yandex.ru/"><img src="https://icon2.cleanpng.com/20180620/wy/kisspng-yandex-internet-5b2aa1107b69c0.5570827015295204005055.jpg" alt="Логотип Яндекс"></a></li>
+      <li> 
+    <img src="https://uslugino.ru/img/105/296089.jpg" width="57" height="57" alt="tg" usemap="#tg">
+                <img src="https://cdn.wmaraci.com/blog/wikipedia-logo.png" style="width: 266px; height: 88px;" alt="Wiki">
+                <map name="tg">
+                    <area shape="circle" coords="63,40,50" href="https://web.telegram.org/k/" alt="linkTG">
+                </map>
+                <map name="wiki">
+                    <area shape="rect" coords="0,0,266,88" href="https://ru.wikipedia.org/" alt="linkWIKI">
+                </map>
+            </li>
+  <li><a href="example.html">Относительная ссылка</a></li>
+  <li><a href="/about/index.html">Ссылка about</a></li>
+  <li><a href="../index.html">Уровнем выше</a></li>
+  <li><a href="../../index.html">2мя уровнями выше текущего</a></li>
+  <li><a href="/">Сокращенная ссылка на главную</a></li>
+  <li><a href="/about">Сокращенная ссылка на внутреннюю</a></li>
+</ol>
+<br><form><label>Имя: <input name="name_polz" maxlength="25" size="25" value=""></label><br>
+        <br><label>email:<input name="email_polz" type="email" maxlength="128" size="40" placeholder="Введите ваш email"></label><br>
+        <br><label>Дата рождения: <input name="data_polz" type="date" value="2004-01-01"></label><br>
+        <br><label>Пол:<input name="pol" type="radio" checked="checked"> Мужской</label><label><input name="pol" type="radio"> Женский</label><br>
+        <br>Количество конечностей:
+        <label><input name="kol_kon" type="radio" checked>2</label>
+        <label><input name="kol_kon" type="radio" > 4</label>
+        <label><input name="kol_kon" type="radio">6</label>
+        <label><input name="kol_kon" type="radio">8</label><br>
+        <br><label>Суперспособности:<br>
+            <select name="super" multiple="multiple" size="3">
+                <option value="1">Бессмертие</option>
+                <option value="2">Прохождение сквозь стены</option>
+                <option value="3">Левитация</option>
+            </select></label><br>
+        <br><label>Поле для биографии:<br>
+            <textarea name="bio" cols="30" rows="20" maxlength="625">Биография персонажа</textarea>
+        </label><br>
+        <br><label>
+            С контрактом ознакомлен(а):
+            <input type="checkbox">
+        </label><br>
+        <br><Label>
+            <input type="submit" value="Отправить">
+        </Label></form></body></html>
