--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <div class="container-fluid page" style="background-color: #e74ef5da">
+      <div class="container-fluid page" style="background-color: #FFFFFF">
         <div class="container">
         <div class="row">
           <div class="col-5 offset-5 col-md-4 offset-md-1 order-2">
@@ -44,13 +44,13 @@
     <body>
     <div class="container">
         <hr />
-            <div class="row mt-3 order-2 order-sm-3" style="background-color: #e74ef5da">
+            <div class="row mt-3 order-2 order-sm-3" style="background-color: #FFE4E1">
                 <div class="col-6 col-md-6">
                 <form>
                     Введите стоимость товара:
-                    <p><input name="p1" type="text"  placeholder="Здеся"></p>
+                    <p><input name="p1" type="text"  placeholder="Стоимость"></p>
                     Введите кол-во товара:
-                 <p><input name="p2" type="text"  placeholder="Тута"></p>
+                 <p><input name="p2" type="text"  placeholder="Количество"></p>
         <div id="result">
         </form>
             </div>
@@ -61,7 +61,7 @@
             </div>
             
         </div>
-    <div class="container-fluid page mt-3" style="background-color: #e74ef5da">
+    <div class="container-fluid page mt-3" style="background-color: #FFFFFF">
         <footer class="footer" id="foot">
           <h5>(с) Енокян Эрик 2022</h5>
         </footer>
