--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <div class="container-fluid page" style="background-color: #FFFFFF">
+      <div class="container-fluid page" style="background-color: #808080">
         <div class="container">
         <div class="row">
           <div class="col-5 offset-5 col-md-4 offset-md-1 order-2">
@@ -61,7 +61,7 @@
             </div>
             
         </div>
-    <div class="container-fluid page mt-3" style="background-color: #FFFFFF">
+    <div class="container-fluid page mt-3" style="background-color: #808080">
         <footer class="footer" id="foot">
           <h5>(с) Енокян Эрик 2022</h5>
         </footer>
